# skills

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierrc.json  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  copy.bara.sky  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.cursor-plugin/: marketplace.json
.github/workflows/: lint.yml  release.yml
claude-plugins-dagster/.claude-plugin/: marketplace.json
claude-plugins-dagster/plugins/dg-troubleshoot/.claude-plugin/: plugin.json
claude-plugins-dagster/plugins/dg-troubleshoot/commands/: prototype.md
dagster-skills-evals/: pyproject.toml  tox.ini
dagster-skills-evals/dagster_skills_evals_tests/: conftest.py  test_dg_commands.py  test_skill_code_blocks.py  test_skills.py  test_skills_benchmarks.py  utils.py
dagster-skills-evals/dagster_skills_evals_tests/__baselines__/: test_complex_asset_selection.json  test_complex_automation_condition.json  test_create_custom_component.json  test_create_dagster_project.json  test_create_dbt_component.json  test_get_run_failure_logs.json  test_list_available_components.json  test_missing_env_vars.json  test_scaffold_asset.json
dagster-skills-evals/src/dagster_skills_evals/: benchmark_display.py  execution.py  markdown.py  models.py
dagster-skills-evals/src/dagster_skills_evals/cli/: __init__.py  _shared.py  benchmark.py  index.py  run.py
plugins/dagster-conventions/.claude-plugin/: plugin.json
plugins/dagster-conventions/skills/dagster-automation/: SKILL.md
plugins/dagster-conventions/skills/dagster-automation/references/: asset-sensors.md  (+8 more)
plugins/dagster-conventions/skills/dagster-conventions/: SKILL.md
plugins/dagster-integrations/.claude-plugin/: plugin.json
plugins/dagster-integrations/skills/dagster-dbt/: SKILL.md
plugins/dagster-integrations/skills/integrations-index/: SKILL.md
plugins/dg-troubleshoot/commands/: create-project.md  create-workspace.md
plugins/dg/.claude-plugin/: plugin.json
plugins/dg/commands/: create-project.md  create-workspace.md  launch.md  logs.md  scaffold.md  troubleshoot.md
plugins/dg/skills/create-project/: SKILL.md
plugins/dg/skills/create-workspace/: SKILL.md
plugins/dg/skills/launch/: SKILL.md
plugins/dg/skills/list/: SKILL.md
plugins/dg/skills/prototype/: SKILL.md
plugins/dg/skills/scaffold/: SKILL.md
plugins/dignified-python/.claude-plugin/: plugin.json
plugins/dignified-python/skills/dignified-python/: SKILL.md
scripts/: generate_skill_index.py
scripts/release/: bump.py  changelog.py
skills/dagster-best-practices/: SKILL.md
skills/dagster-best-practices/references/: README.md
skills/dagster-expert/: SKILL.md
skills/dagster-expert/.claude-plugin/: plugin.json
skills/dagster-expert/.cursor-plugin/: plugin.json
skills/dagster-expert/references/: asset-key-design.md  implementation-workflow.md
skills/dagster-expert/references/automation/: schedules.md
skills/dagster-expert/references/cli/: api.md  asset-selection.md  check.md  launch.md  list.md  scaffold.md
skills/dagster-expert/skills/dagster-expert/: SKILL.md
skills/dagster-integrations/.claude-plugin/: plugin.json
skills/dagster-integrations/references/: README.md
skills/dagster-integrations/references/dagster-dbt/: README.md  dbt-cloud.md
skills/dg/: SKILL.md
skills/dg/references/: README.md  list.md  scaffold.md
skills/dignified-python/.claude-plugin/: plugin.json
skills/dignified-python/.cursor-plugin/: plugin.json
skills/dignified-python/skills/dignified-python/: SKILL.md  dignified-python-core.md
(+213 files in other folders)
